manifests/workerservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workerservice
spec:
  selector:
    app: workerservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083  # Port the service listens on
