manifests/workerservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workerservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-set-headers: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/worker
            pathType: Prefix
            backend:
              service:
                name: workerservice
                port:
                  number: 80
